2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* tools/m4/convert_cluttermm.m4:
	* clutter/src/types.hg: add Gravity enum
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-scale.ccg:
	* clutter/src/behaviour-scale.hg: added initial implementation of
	BehaviourScale class

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* Update to latest clutter trunk API
	* clutter/src/actor.hg: renamed get_id() to get_gid()
	* clutter/src/behaviour-ellipse.hg: renamed *_angle_begin to *_angle_start

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-ellipse.ccg:
	* clutter/src/behaviour-ellipse.hg:
	* clutter/src/behaviour-rotate.ccg:
	* clutter/src/behaviour-rotate.hg: added initial implementation of
	BehaviourRotate class

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/types.ccg/hg:
	* clutter/cluttermm/types.h: move this to types.hg so that we can wrap some
	enums here with gmmproc
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour-ellipse.ccg:
	* clutter/src/behaviour-ellipse.hg: add initial implementation of
	BehaviorEllipse class
	* tools/m4/convert_cluttermm.m4: add enum conversions

2007-11-17  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Doxyfile.in: update to new config file format

2007-11-15  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/clutter_signals.defs: Corrected the 
	Actor::enter-event signal definition.
	* clutter/src/actor.hg: Added some event signals that were 
	commented out.
	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg: Added a constructor (and create) 
	which takes a timeline and alpha callback.
	* clutter/src/container.ccg:
	* clutter/src/container.hg: Added foreach() and 
	sort_depth_order(), and the foreach() vfunc.
	* clutter/src/stage.hg: Added stage_event().
	* clutter/src/timeline.hg: Added clone().

2007-11-12  Murray Cumming  <murrayc@murrayc.com>
