@@ -1,0 +1,48 @@
+/* Copyright (C) 2007 The cluttermm Development Team
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the Free
+ * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#include <cluttermm/texture.h>
+#include <cluttermm/types.h>
+ 
+_DEFS(cluttermm,clutter)
+_PINCLUDE(cluttermm/private/actor_p.h)
+
+
+namespace Clutter
+{
+
+class CloneTexture :
+  public Actor
+{
+  _CLASS_GOBJECT(CloneTexture, ClutterCloneTexture, CLUTTER_TEXTURE, Actor, ClutterActor)
+
+protected:
+  _WRAP_CTOR(CloneTexture(const Glib::RefPtr<Texture>& texture), clutter_clone_texture_new)
+
+public:
+#m4 _CONVERSION(`ClutterActor*',`Glib::RefPtr<CloneTexture>',`Glib::wrap((ClutterCloneTexture*)$3)')
+
+  _WRAP_CREATE(const Glib::RefPtr<Texture>& texture);
+
+  _WRAP_METHOD(Glib::RefPtr<Texture> get_parent_texture() const, clutter_clone_texture_get_parent_texture)
+  _WRAP_METHOD(void get_parent_texture(const Glib::RefPtr<Texture>& texture), clutter_clone_texture_set_parent_texture)
+
+};
+
+} // namespace Clutter
+
+//vim: ts=2,sw=2
